--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    margin-top: -50px;
+    margin-top: 40px;;
     position: relative;
     z-index: 10;
 }
